--- a/www/css/index.css
+++ b/www/css/index.css
@@ -24,18 +24,7 @@ body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color:#E4E4E4;
-    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-webkit-gradient(
-        linear,
-        left top,
-        left bottom,
-        color-stop(0, #A7A7A7),
-        color-stop(0.51, #E4E4E4)
-    );
-    background-attachment:fixed;
+    background-color:#f0f0f0;
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:12px;
     height:100%;
@@ -73,9 +62,12 @@ body {
     padding: 1em;
     margin: 1em;
     background: #fff;
-    border: 1px solid #333;
+    border: 1px solid #aaa;
 }
 .mobile-post-outer h3 {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 0.5em;
     font-size: 2em;
     color: #333;
 }
@@ -84,4 +76,58 @@ a {
 }
 .mobile-post-outer img {
     width: 50%;
+}
+
+.loader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    background-image: url(../img/load.gif);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 50%;
+    opacity: 1;
+    max-height: 10000px;
+    transition: opacity 250ms ease-in, max-height 500ms;
+}
+.finished {
+    opacity: 0;
+    max-height: 0;
+}
+
+.mobile-post-outer {
+    transform: translateY(-5px);
+    opacity: 0;
+    transition: transform 500ms ease-out, opacity 250ms;
+}
+.mobile-post-outer:nth-child(2) {transition-delay:200ms;}
+.mobile-post-outer:nth-child(3) {transition-delay:300ms;}
+.mobile-post-outer:nth-child(4) {transition-delay:400ms;}
+.mobile-post-outer:nth-child(5) {transition-delay:500ms;}
+.mobile-post-outer.loaded {
+    transform: translateY(0px);
+    opacity: 1;
+}
+
+.mobile-index-arrow {
+    display: none;
+}
+.mobile-index-contents {
+
+}
+.mobile-index-thumbnail {
+
+}
+.post-body {
+    color: #333;
+    margin-top: 1em;
+}
+.mobile-index-comment {
+
+}
+.mobile-date-outer {
+
 }
