--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  font-size: 16px;
   -webkit-tap-highlight-color: transparent;
   /* make transparent link selection, adjust last value opacity 0 to 1.0 */ }
 
@@ -12,13 +11,9 @@ body {
   /* prevent webkit from resizing text to fit */
   -webkit-user-select: none;
   /* prevent copy paste, to allow, change 'none' to 'text' */
-  background-color: #f0f0f0;
-  font-family: 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+  background-color: #ffffff;
   font-size: 16px;
   height: 100%;
-  margin: 0px;
-  padding: 0px;
-  text-transform: uppercase;
   width: 100%; }
 
 header {
@@ -184,6 +179,10 @@ form {
   width: 100%;
   height: 100%;
   background-color: #ffffff;
-  opacity: .5; }
+  background-image: url(../img/load.gif);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  opacity: .25; }
 
 /*# sourceMappingURL=style.css.map */
