--- a/www/scss/core.scss
+++ b/www/scss/core.scss
@@ -4,7 +4,17 @@
 * {
 	margin: 0;
 	padding: 0;
-	font-size: 16px;
+	-webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
+}
+
+body {
+    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
+    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
+    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
+    background-color: $white;
+    font-size: 16px;
+    height: 100%;
+    width: 100%;
 }
 
 header {
@@ -217,5 +227,9 @@ form {
 	width: 100%;
 	height: 100%;
 	background-color: $white;
-	opacity: .5;
+	background-image: url(../img/load.gif);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 100%;
+	opacity: .25;
 }
