--- a/www/scss/partials/_vars.scss
+++ b/www/scss/partials/_vars.scss
@@ -1,8 +1,11 @@
 $white: #ffffff;
 $black: #000000;
 $red: #ff0000;
+$lightRed: #ffaaaa;
 
-$primaryColour: #aabbcc;
+$primaryColour: #778899;
+
+$textBlack: #373737;
 
 $popupBackground: rgba(0, 0, 0, .75);
 $transparent: rgba(0, 0, 0, 0);
