--- a/www/css/style.css
+++ b/www/css/style.css
@@ -108,17 +108,18 @@ hr {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0);
   transition: background-color 500ms ease; }
   .popup-wrapper.active {
-    background-color: rgba(0, 0, 0, 0.75); }
+    background-color: rgba(255, 255, 255, 0.85); }
   .popup-wrapper .popup {
     position: absolute;
     top: 50%;
     transform: translateY(-50%) scale(1.05);
     opacity: 0;
     width: 100%;
-    background-color: #ffffff;
+    color: #ffffff;
+    background-color: #778899;
     padding: 1em 0;
     transition: transform 500ms ease, opacity 500ms ease; }
     .popup-wrapper .popup.active {
@@ -128,10 +129,18 @@ hr {
       position: absolute;
       top: .5em;
       right: .5em;
-      padding: .1em .4em;
+      width: 2em;
+      height: 2em;
       background: none;
-      color: #ff0000;
-      border: solid 1px #778899; }
+      background-image: url(../img/cross_light.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 50%;
+      border: solid 1px #ffffff; }
+    .popup-wrapper .popup input {
+      background: none;
+      color: #ffffff;
+      border: solid 1px #ffffff; }
 
 .settings h2,
 .settings input {
@@ -155,7 +164,8 @@ hr {
   padding: 0 2%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  perspective: 50em; }
   #cached-item-display li {
     position: relative;
     padding: .5em;
@@ -163,13 +173,24 @@ hr {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    border: solid 1px #778899; }
+    border: solid 1px #778899;
+    transition: transform 500ms ease; }
     #cached-item-display li.shared {
       color: #ffffff;
       background-color: #778899; }
       #cached-item-display li.shared .delete-cached-item {
         background-image: url(../img/cross_light.svg);
         border-color: #ffffff; }
+      #cached-item-display li.shared .back-face .confirm-delete,
+      #cached-item-display li.shared .back-face .cancel-delete {
+        color: #ffffff;
+        border: solid 1px #ffffff; }
+    #cached-item-display li.deleting {
+      transform: rotateX(180deg); }
+      #cached-item-display li.deleting .front-face {
+        display: none; }
+      #cached-item-display li.deleting .back-face {
+        display: block; }
     #cached-item-display li p.description {
       font-weight: bold; }
     #cached-item-display li p.price, #cached-item-display li p.date {
@@ -189,6 +210,17 @@ hr {
       border: solid 1px #778899;
       width: 2em;
       height: 2em; }
+    #cached-item-display li .back-face {
+      display: none;
+      text-align: center;
+      transform: rotateX(-180deg); }
+      #cached-item-display li .back-face .confirm-delete,
+      #cached-item-display li .back-face .cancel-delete {
+        background: none;
+        padding: .5em .9em;
+        margin: .3em 3em;
+        color: #778899;
+        border: solid 1px #778899; }
 
 #loading-screen {
   position: absolute;
