--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,238 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-tap-highlight-color: transparent;
-  /* make transparent link selection, adjust last value opacity 0 to 1.0 */ }
-
-body {
-  -webkit-touch-callout: none;
-  /* prevent callout to copy image, etc when tap to hold */
-  -webkit-text-size-adjust: none;
-  /* prevent webkit from resizing text to fit */
-  -webkit-user-select: none;
-  /* prevent copy paste, to allow, change 'none' to 'text' */
-  background-color: #ffffff;
-  font-family: 'Helvetica, Arial, sans-serif';
-  font-size: 16px;
-  color: #373737;
-  height: 100%;
-  width: 100%; }
-
-header {
-  position: relative;
-  width: 100%;
-  border-bottom: solid 1px #778899;
-  background-color: #778899; }
-  header h1,
-  header h2 {
-    width: 96%;
-    margin: 0 auto;
-    font-size: 1em;
-    color: #ffffff; }
-  header #sync,
-  header #settings {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 2em;
-    height: 2em;
-    border: solid 1px #ffffff;
-    background: none;
-    background-size: 85%;
-    background-repeat: no-repeat;
-    background-position: center;
-    color: transparent;
-    overflow: hidden; }
-  header #sync {
-    background-image: url(../img/sync.svg);
-    right: .5em; }
-  header #settings {
-    background-image: url(../img/cog.svg);
-    right: 5em; }
-
-form {
-  width: 96%;
-  margin: 0 auto; }
-  form input:not([type="checkbox"]) {
-    width: 100%;
-    padding: 1em;
-    border: solid 1px #778899;
-    margin-top: 1em;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box; }
-  form label {
-    display: block;
-    width: 100%;
-    margin: 1em 0; }
-  form input[type="checkbox"] {
-    position: absolute;
-    top: -9999px;
-    left: -9999px; }
-    form input[type="checkbox"] + label {
-      color: #778899; }
-      form input[type="checkbox"] + label span {
-        position: relative;
-        display: inline-block;
-        vertical-align: middle;
-        width: 2em;
-        height: 2em;
-        margin-right: .5em;
-        border: solid 1px #778899; }
-    form input[type="checkbox"]:checked + label span:after {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      content: "\2714";
-      font-size: 1.5em;
-      color: #778899; }
-  form button {
-    background: none;
-    background-image: url(../img/plus.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 50%;
-    border: solid 1px #778899;
-    width: 5em;
-    height: 5em; }
-
-hr {
-  background: none;
-  border: solid 1px #778899;
-  margin: 1em 0; }
-
-.popup-wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0);
-  transition: background-color 500ms ease; }
-  .popup-wrapper.active {
-    background-color: rgba(255, 255, 255, 0.85); }
-  .popup-wrapper .popup {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%) scale(1.05);
-    opacity: 0;
-    width: 100%;
-    color: #ffffff;
-    background-color: #778899;
-    padding: 1em 0;
-    transition: transform 500ms ease, opacity 500ms ease; }
-    .popup-wrapper .popup.active {
-      opacity: 1;
-      transform: translateY(-50%) scale(1); }
-    .popup-wrapper .popup .popup-close {
-      position: absolute;
-      top: .5em;
-      right: .5em;
-      width: 2em;
-      height: 2em;
-      background: none;
-      background-image: url(../img/cross_light.svg);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: 50%;
-      border: solid 1px #ffffff; }
-    .popup-wrapper .popup input {
-      background: none;
-      color: #ffffff;
-      border: solid 1px #ffffff; }
-
-.settings h2,
-.settings input {
-  margin-left: 2%; }
-
-.settings h2 {
-  margin-bottom: .5em; }
-
-.settings input {
-  padding: .5em;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border: solid 1px #778899; }
-
-#cached-item-display {
-  width: 100%;
-  height: 200px;
-  overflow-y: auto;
-  margin-top: .5em;
-  padding: 0 2%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  perspective: 50em; }
-  #cached-item-display li {
-    position: relative;
-    padding: .5em;
-    margin-bottom: .5em;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    border: solid 1px #778899;
-    transition: transform 500ms ease; }
-    #cached-item-display li.shared {
-      color: #ffffff;
-      background-color: #778899; }
-      #cached-item-display li.shared .delete-cached-item {
-        background-image: url(../img/cross_light.svg);
-        border-color: #ffffff; }
-      #cached-item-display li.shared .back-face .confirm-delete,
-      #cached-item-display li.shared .back-face .cancel-delete {
-        color: #ffffff;
-        border: solid 1px #ffffff; }
-    #cached-item-display li.deleting {
-      transform: rotateX(180deg); }
-      #cached-item-display li.deleting .front-face {
-        display: none; }
-      #cached-item-display li.deleting .back-face {
-        display: block; }
-    #cached-item-display li p.description {
-      font-weight: bold; }
-    #cached-item-display li p.price, #cached-item-display li p.date {
-      font-size: .9em;
-      font-weight: 300;
-      font-style: italic; }
-    #cached-item-display li .delete-cached-item {
-      position: absolute;
-      right: .5em;
-      top: 50%;
-      transform: translateY(-50%);
-      background: none;
-      background-image: url(../img/cross.svg);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: 50%;
-      border: solid 1px #778899;
-      width: 2em;
-      height: 2em; }
-    #cached-item-display li .back-face {
-      display: none;
-      text-align: center;
-      transform: rotateX(-180deg); }
-      #cached-item-display li .back-face .confirm-delete,
-      #cached-item-display li .back-face .cancel-delete {
-        background: none;
-        padding: .5em .9em;
-        margin: .3em 3em;
-        color: #778899;
-        border: solid 1px #778899; }
-
-#loading-screen {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #ffffff;
-  background-image: url(../img/load.gif);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  opacity: .25; }
+*{margin:0;padding:0;-webkit-tap-highlight-color:transparent}body{-webkit-touch-callout:none;-webkit-text-size-adjust:none;-webkit-user-select:none;background-color:#fff;font-family:'Helvetica, Arial, sans-serif';font-size:16px;color:#373737;height:100%;width:100%}header{position:relative;width:100%;border-bottom:solid 1px #789;background-color:#789}header h1,header h2{width:96%;margin:0 auto;font-size:1em;color:#fff}header #sync,header #settings{position:absolute;top:50%;transform:translateY(-50%);width:2em;height:2em;border:solid 1px #fff;background:none;background-size:85%;background-repeat:no-repeat;background-position:center;color:transparent;overflow:hidden}header #sync{background-image:url(../img/sync.svg);right:.5em}header #settings{background-image:url(../img/cog.svg);right:5em}form{width:96%;margin:0 auto}form input:not([type="checkbox"]){width:100%;padding:1em;border:solid 1px #789;margin-top:1em;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}form label{display:block;width:100%;margin:1em 0}form input[type="checkbox"]{position:absolute;top:-9999px;left:-9999px}form input[type="checkbox"]+label{color:#789}form input[type="checkbox"]+label span{position:relative;display:inline-block;vertical-align:middle;width:2em;height:2em;margin-right:.5em;border:solid 1px #789}form input[type="checkbox"]:checked+label span:after{position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);content:"\2714";font-size:1.5em;color:#789}form select{width:100%;padding:1em .7em;background:#789;color:#fff;border:solid 1px #fff;margin-top:1em;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}form button{background:none;background-image:url(../img/plus.svg);background-repeat:no-repeat;background-position:center;background-size:50%;border:solid 1px #789;width:5em;height:5em}hr{background:none;border:solid 1px #789;margin:1em 0}.popup-wrapper{position:absolute;top:0;left:0;width:100%;height:100%;background-color:rgba(255,255,255,0);transition:background-color 500ms ease}.popup-wrapper.active{background-color:rgba(255,255,255,0.85)}.popup-wrapper .popup{position:absolute;top:50%;transform:translateY(-50%) scale(1.05);opacity:0;width:100%;color:#fff;background-color:#789;padding:1em 0;transition:transform 500ms ease, opacity 500ms ease}.popup-wrapper .popup.active{opacity:1;transform:translateY(-50%) scale(1)}.popup-wrapper .popup .popup-close{position:absolute;top:.5em;right:.5em;width:2em;height:2em;background:none;background-image:url(../img/cross_light.svg);background-repeat:no-repeat;background-position:center;background-size:50%;border:solid 1px #fff}.popup-wrapper .popup input{background:none;color:#fff;border:solid 1px #fff}.popup-wrapper .popup input#edit-sync-ip{margin-top:1em}.settings h2,.settings input{margin-left:2%}.settings h2{margin-bottom:.5em}.settings input{padding:.5em;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;border:solid 1px #789}#cached-item-display{width:100%;height:200px;overflow-y:auto;margin-top:.5em;padding:0 2%;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;perspective:50em}#cached-item-display li{position:relative;padding:.5em;margin-bottom:.5em;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;border:solid 1px #789;transition:transform 500ms ease}#cached-item-display li.shared{color:#fff;background-color:#789}#cached-item-display li.shared .delete-cached-item{background-image:url(../img/cross_light.svg);border-color:#fff}#cached-item-display li.shared .back-face .confirm-delete,#cached-item-display li.shared .back-face .cancel-delete{color:#fff;border:solid 1px #fff}#cached-item-display li.deleting{transform:rotateX(180deg)}#cached-item-display li.deleting .front-face{display:none}#cached-item-display li.deleting .back-face{display:block}#cached-item-display li p.description{font-weight:bold}#cached-item-display li p.description em{font-weight:100}#cached-item-display li p.price,#cached-item-display li p.date{font-size:.9em;font-weight:300;font-style:italic}#cached-item-display li .delete-cached-item{position:absolute;right:.5em;top:50%;transform:translateY(-50%);background:none;background-image:url(../img/cross.svg);background-repeat:no-repeat;background-position:center;background-size:50%;border:solid 1px #789;width:2em;height:2em}#cached-item-display li .back-face{display:none;text-align:center;transform:rotateX(-180deg)}#cached-item-display li .back-face .confirm-delete,#cached-item-display li .back-face .cancel-delete{background:none;padding:.5em .9em;margin:.3em 3em;color:#789;border:solid 1px #789}#loading-screen{position:absolute;top:0;left:0;width:100%;height:100%;background-color:#fff;background-image:url(../img/load.gif);background-position:center;background-repeat:no-repeat;background-size:100%;opacity:.25}
 
 /*# sourceMappingURL=style.css.map */
